手動修正完了

--- a/articles/d3ffb5c9d0c156.md
+++ b/articles/d3ffb5c9d0c156.md
@@ -12,13 +12,13 @@ Zenn のコンテンツを textlint で校正しつつ GitHub で管理する方
 
 # 2. textlintとは
 
-[textlint](https://textlint.github.io/)は、テキスト（難しい言い方をすると自然言語）を校正するための、JavaScript で書かれたオープンソースのツールです！
+[textlint](https://textlint.github.io/)は、テキスト（難しい言い方をすると自然言語）を校正するための、JavaScript で書かれたオープンソースのツールです。
 
 textlint を利用し校正するメリットは例として以下です。
 - 誤字や脱字を自動で検出できる
 - 適切な日本語を使えているかを自動で検出できる
 - 検出だけでなく、自動で修正してくれる
 
-また、校正ルールを組み合わせたり、カスタマイズすることで、より高度な校正を行うことができると思います！
+また、校正ルールを組み合わせたり、カスタマイズすることで、より高度な校正ができます。
 
-準備はいいですか？
+それでは実際に textlint を使ってみましょう。
